--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,13 @@ spring.web.resources.static-locations=classpath:/static_resources/css/,classpath
 #-----------------------------
 # Data Source
 #-----------------------------
-spring.datasource.url=jdbc:postgresql://pecunia-web-pecunia-web.b.aivencloud.com:26571/pecunia-inventur-minecraft
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_ZowLrPEs2We4NQLgXXi
+spring.datasource.url=jdbc:postgresql://localhost:5432/deine_datenbank
+spring.datasource.username=dein_benutzername
+spring.datasource.password=dein_passwort
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.test-while-idle=true
 spring.datasource.validation-query=SELECT 1
+#-----------------------------
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
